<resources>
	<string name="prefs">Settings</string>
	<string name="prefs_logging">Logging</string>
	<string name="prefs_wifi_catalog">Wifi Catalog</string>
	<string name="prefs_maps">Maps</string>
	<string name="prefs_gps">GPS</string>
	<string name="prefs_gps_os_settings">Phone\'s GPS settings</string>
	<string name="prefs_gps_os_settings_summary">Click to see your phone\'s GPS settings</string>
	<string name="prefs_check_gps_startup">Check GPS at startup</string>
	<string name="prefs_check_gps_startup_summary">Warn if GPS is disabled at startup, and offer to
		enable it
	</string>
	<string name="prefs_gps_logging_interval">GPS logging interval</string>
	<string name="prefs_gps_logging_interval_summary">Use 0 for the shortest possible (affects battery
		life)
	</string>
	<string name="prefs_gps_logging_interval_seconds">seconds</string>
	<string name="prefs_save_gps_track">Save GPX track</string>
	<string name="prefs_save_gps_track_summary">Create a GPX file for each uploaded session.Find
		gpx tracks in data directory.\n(Note: GPX tracks themselves are never
		uploaded)
	</string>
	<string name="prefs_ui">User interface</string>
	<string name="prefs_map_none">None</string>
	<string name="prefs_ui_keep_screen_on">Keep screen on</string>
	<string name="prefs_ui_keep_screen_on_summary">Activate to prevent phone from locking screen after
		idle time
	</string>
	<string name="prefs_credentials">Credentials</string>
	<string name="prefs_credentials_user">openbmap Login</string>
	<string name="prefs_credentials_user_summary">openbmap Login</string>
	<string name="prefs_credentials_password">openbmap Password</string>
	<string name="prefs_credentials_password_summary">openbmap Password</string>
	<string name="prefs_save_cells">Cell Logging</string>
	<string name="prefs_save_cells_summary">Activate to scan for (GSM, UMTS, CDMA, ..) cells
	</string>
	<string name="prefs_save_wifis_summary">Activate to scan for wifis</string>
	<string name="prefs_save_wifis">Wifi Logging</string>
	<string name="prefs_data_map">Select Map</string>
	<string name="prefs_data_map_summary">If you don\'t have a map yet, select \'Download
		map\'
	</string>
	<string name="prefs_data_download">Download map</string>
	<string name="prefs_data_download_summary">Alternatively copy maps in your data/maps directory
		manually
	</string>
	<string name="prefs_data_ref_database">Select Wifi Catalog</string>
	<string name="prefs_data_ref_database_summary">Install a wifi catalog to see all known openbmap
		wifis on the map. This helps you, when you\'re looking for new wifis
	</string>
	<string name="prefs_download_wifi_catalog">Download Wifi Catalog</string>
	<string name="prefs_download_wifi_catalog_summary">Current size (~200 MB)</string>
	<string name="prefs_min_cell_distance">Cell log interval</string>
	<string name="prefs_min_cell_distance_hint">Minimum distance between two cell scans (in meters)
	</string>
	<string name="prefs_min_wifi_distance">Wifi log interval</string>
	<string name="prefs_min_wifi_distance_hint">Minimum distance between two wifi scans (in
		meters)
	</string>
	<string name="prefs_req_gps_accuracy">Required GPS accuracy</string>
	<string name="prefs_req_gps_accuracy_hint">If GPS accuracy (in meters) is worse than
		threshold, logging will be skipped
	</string>
	<string name="prefs_display_always_on">Screen always on</string>
	<string name="prefs_display_always_on_summary">Screen will stay on while tracking. Disable to save battery
	</string>
	<string name="prefs_gps_provider">GPS Provider</string>
	<string name="prefs_gps_provider_summary">Selected GPS source</string>
	<string-array name="prefs_gps_provider_keys">
		<item>Internal</item>
	</string-array>
	<string-array name="prefs_gps_provider_values">
		<item>GPS_PROVIDER</item>
	</string-array>
	<string name="prefs_debug">Debug settings</string>
	<string name="prefs_simulate_upload_summary">Don\'t upload to server</string>
	<string name="prefs_simulate_upload">Skip upload to openbmap.org</string>
	<string name="prefs_keep_export_files_summary">Keep a local copy of uploaded files.\nFind files in
		data directory.\n(Helpful for debugging)
	</string>
	<string name="prefs_keep_export_files">Keep uploaded files</string>
	<string name="prefs_clean_database_summary">Database grows over time. Click to free unused
		space by reorganising database
	</string>
	<string name="prefs_clean_database_title">Reorganise database</string>
	<string name="prefs_privacy">Privacy</string>
	<string name="prefs_block_homezone_summary">Blocks logging in 500m around current position. You
		can also directly edit custom_location.xml on your SD-card
	</string>
	<string name="prefs_block_homezone_title">Don\'t scan my back-yard</string>
	<string name="prefs_anonymise_ssid_summary">Replaces SSIDs in uploads with a MD5 value to
		mitigate privacy issues (ssid \'John Does wifi\' would something like
		\'FD33531\')
	</string>
	<string name="prefs_anonymise_ssid">Anonymise SSID in upload files</string>
	<string name="prefs_folder_settings">Folder settings</string>
	<string name="prefs_map_folder">Map folder</string>
	<string name="prefs_data_map_folder_summary">Select map folder</string>
	<string name="prefs_wifi_catalog_folder">Wifi catalog folder</string>
	<string name="prefs_wifi_catalog_folder_summary">Select wifi catalog folder
	</string>
	<string name="app_name">Radiobeacon</string>
	<string name="cell">Cell</string>
	<string name="operator">Operator</string>
	<string name="type">Type</string>
	<string name="dbm">dBm</string>
	<string name="ssid">SSID</string>
	<string name="level">Level</string>
	<string name="turnOnGpsQuestion">GPS is switched off! Would you like to activate GPS
		now?</string>
	<string name="na">N/A</string>
	<string name="gsm">GSM</string>
	<string name="edge">EDGE</string>
	<string name="umts">UMTS</string>
	<string name="cdma">CDMA</string>
	<string name="edvo_0">EDVO0</string>
	<string name="edvo_a">EDVOA</string>
	<string name="onexrtt">1xRTT</string>
	<string name="hsdpa">HSDPA</string>
	<string name="hsupa">HSUPA</string>
	<string name="hspa">HSPA</string>
	<string name="iden">IDEN</string>
	<string name="edvo_b">EDVOB</string>
	<string name="lte">LTE</string>
	<string name="ehrpd">eHRPD</string>
	<string name="hspa_p">HSPA+</string>
	<string name="networkTypeCaption">Technology</string>
	<string name="cellIdCaption">Cell ID</string>
	<string name="baseIdCaption">Base ID</string>
	<string name="operatorCaption">Operator</string>
	<string name="mccCaption">MCC</string>
	<string name="mncCaption">MNC</string>
	<string name="strenghtDbmCaption">Strength (dbm)</string>
	<string name="isServingCellCaption">Is serving cell?</string>
	<string name="radiobeacon_licence">Licensed under AGPL v3</string>
	<string name="openbmap_licence_caption">Data: OpenBmap</string>
	<string name="openbmap_license">CC-by-SA 3.0 / Odbl Licence</string>
	<string name="mapsforge_source">Maps library: Mapsforge Library</string>
	<string name="mapsforge_license">GNU LGPL3 licence</string>
	<string name="credits">Credits</string>
	<string name="map_data_source">Map data: Openstreetmap</string>
	<string name="map_data_license">Odbl Licence</string>
	<string name="other_credits">Some great ideas were taken from OSMTracker, stack
		overflow discussions and any many, many others
	</string>
	<string name="bug_report">Always find the latest version (and the issue
		tracker) at
	</string>
	<string name="subtitle">OpenBmap Wifi &amp; Cell Logger</string>
	<string name="sessions">Sessions</string>
	<string name="title">Radiobeacon</string>
	<string name="id">#</string>
	<string name="n_a">N/A</string>
	<string name="total_empty">(--)</string>
	<string name="capabilities">Capabilities</string>
	<string name="frequency">Frequency</string>
	<string name="channel">Channel</string>
	<string name="date">Date</string>
	<string name="please_select_map">Please select a map file first!</string>
	<string name="error_dowload_error">Error: Download failed. Maybe connection was
		interrupted?
	</string>
	<string name="warning_outdated_client">Your client version is too old.\nPlease update!</string>
	<string name="warning_no_server_connection">Couldn\'t contact server. Are you online?</string>
	<string name="warning_client_version_not_checked">Couldn\'t contact server. Either you\'re offline or
		the server is down!</string>
	<string name="warning_session_closed">Can\'t resume! Session has already been uploaded.
	</string>
	<string name="warning_already_uploaded">Won\'t upload session. Has already been uploaded!
	</string>
	<string name="question_delete_session">Do you want to delete session?</string>
	<string name="session_already_uploaded">Session already uploaded</string>
	<string name="confirmation">Confirmation</string>
	<string name="user_or_password_missing">User name or password is missing!</string>
	<string name="question_enter_user">Enter user name and password now?</string>
	<string name="deleted">Deleted!</string>
	<string name="warning_sd_not_writable">Can\'t write to SD card. Perhaps mounted on desktop
		pc?
	</string>
	<string name="error_save_file_failed">Error: Couldn\'t save wifi catalog! Check SD card /
		permissions!
	</string>
	<string name="error_create_directory_failed">Couldn\'t create data directory</string>
	<string name="tap_hotspot_to_see_details">Tap wifi to see details</string>
	<string name="start_tracking">Start tracking</string>
	<string name="stop_tracking">Stop tracking</string>
	<string name="battery_warning">Battery low: Stopping track</string>
	<string name="version">Version:</string>
	<string name="warning">Warning!</string>
	<string name="hint_notification">Tap here to display main screen</string>
	<string name="notification">RadioBeacon is tracking (#{0})</string>
	<string name="notification_caption">Radiobeacon is scanning</string>
	<string name="exporting_wifis">Exporting wifis</string>
	<string name="uploading_wifis">Uploading wifis</string>
	<string name="exporting_cells">Exporting cells</string>
	<string name="uploading_cells">Uploading cells</string>
	<string name="exporting_gpx">Exporting GPX to SD card</string>
	<string name="resume">Resume</string>
	<string name="stop">Stop</string>
	<string name="delete">Delete</string>
	<string name="upload">Upload</string>
	<string name="export_gpx">Export GPX track</string>
	<string name="delete_all">DELETE ALL</string>
	<string name="upload_skipped">Upload skipped (If this happened accidentally,
		check
		your debug settings)
	</string>
	<string name="preparing_export">Preparing export..</string>
	<string name="app_description">Openbmap.org wifi and cell logger</string>
	<string name="error">Error</string>
	<string name="no_data_connection">No data connection!</string>
	<string name="link_repository">http://code.google.com/p/openbmap/</string>
	<string name="radiobeacon_licence_caption">Client licence</string>
	<string name="session_uploaded">Session uploaded</string>
	<string name="do_you_want_to_delete_this_session">Do you want to delete this session?</string>
	<string name="do_you_want_to_delete_processed_sessions">Do you want to delete uploaded sessions?</string>
	<string name="encryption">Encryption</string>
	<string name="unknown">unknown</string>
	<string name="error_version_check_title">Error on version check</string>
	<string name="error_version_check_body">Check your online connection!\n(e.g. in
		browser).\nWould you like to try an automatic fix now?\n(Toggles your
		wifi adapter state to trigger a reconnect)
	</string>
	<string name="accuracy">Accuracy</string>
	<string name="no_sat_signal">No sat signal</string>
	<string name="no_measurements"># Measurements</string>
	<string name="psc">PSC</string>
	<string name="blacklisted_bssid">is blacklisted (BSSID)</string>
	<string name="blacklisted_ssid">is blacklisted (SSID)</string>
	<string name="is_new">New?</string>
	<string name="blacklisted_area">Results not saved: blacklisted area</string>
</resources>