<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/prefs_logging" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="save_cells"
            android:summary="@string/prefs_save_cells_summary"
            android:title="@string/prefs_save_cells" >
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="save_wifis"
            android:summary="@string/prefs_save_wifis_summary"
            android:title="@string/prefs_save_wifis" >
        </CheckBoxPreference>

        <EditTextPreference
            android:defaultValue="35"
            android:dialogMessage="@string/prefs_min_cell_distance_hint"
            android:inputType="numberDecimal"
            android:key="logging.cell_distance"
            android:summary="@string/prefs_min_cell_distance_hint"
            android:title="@string/prefs_min_cell_distance" />
        <EditTextPreference
            android:defaultValue="5"
            android:dialogMessage="@string/prefs_min_wifi_distance_hint"
            android:inputType="numberDecimal"
            android:key="logging.wifi_distance"
            android:summary="@string/prefs_min_wifi_distance_hint"
            android:title="@string/prefs_min_wifi_distance" />
        <EditTextPreference
            android:defaultValue="35"
            android:dialogMessage="@string/prefs_req_gps_accuracy_hint"
            android:inputType="numberDecimal"
            android:key="logging_gps_accuracy"
            android:summary="@string/prefs_req_gps_accuracy_hint"
            android:title="@string/prefs_req_gps_accuracy" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/prefs_storage" >
        <EditTextPreference
            android:defaultValue="/org.openbmap"
            android:dialogMessage="@string/prefs_data_dir_hint"
            android:key="data.dir"
            android:summary=""
            android:title="@string/prefs_data_dir" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/prefs_maps" >
        <ListPreference
            android:defaultValue="none"
            android:key="data.map"
            android:summary="@string/prefs_data_map_summary"
            android:title="@string/prefs_data_map" >
        </ListPreference>
        <ListPreference
            android:defaultValue="none"
            android:key="data.download"
            android:summary="@string/prefs_data_download_summary"
            android:title="@string/prefs_data_download" >
        </ListPreference>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="ui.keep_screen_on"
            android:summary="@string/prefs_ui_keep_screen_on_summary"
            android:title="@string/prefs_ui_keep_screen_on" >
        </CheckBoxPreference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/prefs_wifi_catalog" >
        <ListPreference
            android:defaultValue="none"
            android:key="data.ref_database"
            android:summary="@string/prefs_data_ref_database_summary"
            android:title="@string/prefs_data_ref_database" >
        </ListPreference>

        <Preference
            android:key="data.download_wifi_catalog"
            android:summary="@string/prefs_download_wifi_catalog_summary"
            android:title="@string/prefs_download_wifi_catalog" >
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/prefs_gps" >
        <Preference
            android:key="gps.ossettings"
            android:summary="@string/prefs_gps_os_settings_summary"
            android:title="@string/prefs_gps_os_settings" >
        </Preference>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="gps.checkstartup"
            android:summary="@string/prefs_check_gps_startup_summary"
            android:title="@string/prefs_check_gps_startup" >
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="gps.save_track"
            android:summary="@string/prefs_save_gps_track_summary"
            android:title="@string/prefs_save_gps_track" >
        </CheckBoxPreference>

        <EditTextPreference
            android:defaultValue="0"
            android:inputType="number"
            android:key="gps.interval"
            android:summary="@string/prefs_gps_logging_interval_summary"
            android:title="@string/prefs_gps_logging_interval" >
        </EditTextPreference>
        <!--
             <ListPreference android:entries="@array/prefs_gps_provider_keys"
			android:entryValues="@array/prefs_gps_provider_values" android:key="gps.provider"
			android:summary="@string/prefs_gps_provider_summary" android:title="@string/prefs_gps_provider" />
        -->
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/prefs_credentials" >
        <EditTextPreference
            android:dialogTitle="@string/prefs_credentials_user"
            android:key="credentials.user"
            android:summary="@string/prefs_credentials_user_summary"
            android:title="@string/prefs_credentials_user" />
        <EditTextPreference
            android:dialogTitle="@string/prefs_credentials_password"
            android:key="credentials.password"
            android:password="true"
            android:summary="@string/prefs_credentials_password_summary"
            android:title="@string/prefs_credentials_password" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/prefs_debug" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="debug.simulate_upload"
            android:summary="@string/prefs_simulate_upload_summary"
            android:title="@string/prefs_simulate_upload" >
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="debug.keep_export_files"
            android:summary="@string/prefs_keep_export_files_summary"
            android:title="@string/prefs_keep_export_files" >
        </CheckBoxPreference>

        <Preference
            android:key="debug.clean_database"
            android:summary="@string/prefs_clean_database_summary"
            android:title="@string/prefs_clean_database_title" >
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/prefs_privacy" >
        <Preference
            android:key="privacy.block_homezone"
            android:summary="@string/prefs_block_homezone_summary"
            android:title="@string/prefs_block_homezone_title" >
        </Preference>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="privacy.anonymise_ssid"
            android:summary="@string/prefs_anonymise_ssid_summary"
            android:title="@string/prefs_anonymise_ssid" >
        </CheckBoxPreference>
    </PreferenceCategory>

</PreferenceScreen>