<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/menu_resume_session"
        android:icon="@drawable/ic_action_play"
        android:title="@string/resume"
        android:showAsAction="always">
    </item>
    <item
        android:id="@+id/menu_stop_session"
        android:icon="@drawable/ic_action_stop"
        android:title="@string/stop"
        android:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/menu_delete_session"
        android:icon="@drawable/ic_action_remove"
        android:title="@string/delete"
        android:showAsAction="always">
    </item>
    <item
        android:id="@+id/menu_upload_session"
        android:icon="@drawable/ic_action_upload"
        android:title="@string/upload"
        android:showAsAction="always">
    </item>
    <item
        android:id="@+id/menu_delete_all_sessions"
        android:icon="@android:drawable/ic_notification_clear_all"
        android:title="@string/delete_all"
        android:showAsAction="ifRoom">
    </item>
     
</menu>