<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/credits_credits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credits"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/credits_app_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/credits_client_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/credits_build"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <TextView
            android:id="@+id/credits_app_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_description"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/credits_bug_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bug_report"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/credits_latest_release"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="@string/link_repository" />

        <TextView
            android:id="@+id/credits_radiobeacon_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radiobeacon_licence_caption"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/credits_radiobeacon_license"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radiobeacon_licence"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/credits_openbmap_licence_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/openbmap_licence_caption"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/credits_openbmap_license"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/openbmap_license"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/credits_mapsforge_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mapsforge_source"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/credits_mapsforge_licence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mapsforge_license"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/credits_map_data_source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_data_source"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/credits_map_data_license"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_data_license"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/credits_other_credits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other_credits"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

</ScrollView>