<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tab1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/celldetails_networktype"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/networkTypeCaption"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/operatorCaption"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/celldetails_operator"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:text="XYZ" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/mccCaption" />

            <TextView
                android:id="@+id/celldetails_mcc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/mncCaption" />

            <TextView
                android:id="@+id/celldetails_mnc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/cellIdCaption"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/celldetails_cellid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="123456"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/baseIdCaption"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/celldetails_baseid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="1234567"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="@string/psc"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/celldetails_psc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="123"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/strenghtDbmCaption" />

            <TextView
                android:id="@+id/celldetails_strength"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/isServingCellCaption" />

            <ImageView
                android:id="@+id/celldetails_serving"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/checkbox_on_background" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:text="@string/no_measurements" />

            <TextView
                android:id="@+id/celldetails_no_measurements"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.65"
                android:text="123"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>
    </TableLayout>

    <fragment
        android:id="@+id/cellDetailsMap"
        android:name="org.openbmap.activity.CellDetailsMap"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    </fragment>

</LinearLayout>